support email added

--- a/pages/kudos.mdx
+++ b/pages/kudos.mdx
@@ -12,3 +12,5 @@ These docs exist due to the great work of our team, thank you
 * Tina
 * Tommy
 * Tanya 
+
+If you'd like to reach these people for questions, drop us a line at [support\@mintlify.com](mailto:support@mintlify.com?subject=Docs-Kudos)
