added contact form (does not render) and updated kudos copy

--- a/pages/kudos.mdx
+++ b/pages/kudos.mdx
@@ -1,16 +1,23 @@
 ---
 title: "Kudos"
-description: "Subtitle (optional)"
+description: "We stand on the shoulders of giants"
 icon: 'champagne-glasses'
 ---
+import MySnippet from '/snippets/support-contact-form.mdx'
 
 ## Thanks
 
-These docs exist due to the great work of our team, thank you
+There are heroes amongst us. Thank you to the following teammembers, who have worked relentlessly to deliver these docs to you:
 
 * Tony
 * Tina
 * Tommy
 * Tanya 
 
-If you'd like to reach these people for questions, drop us a line at [support\@mintlify.com](mailto:support@mintlify.com?subject=Docs-Kudos)
+To reach these people for questions, drop a line to [support\@mintlify.com](mailto:support@mintlify.com?subject=Docs-Kudos)
+-- or --
+
+
+## Send a ticket to support
+How can we help today?
+<support-contact-form/>
