create support contact form snippet

--- a/pages/kudos.mdx
+++ b/pages/kudos.mdx
@@ -3,7 +3,7 @@ title: "Kudos"
 description: "We stand on the shoulders of giants"
 icon: 'champagne-glasses'
 ---
-import MySnippet from '/snippets/support-contact-form.mdx'
+import SupportContactForm from '/snippets/support-contact-form.mdx';
 
 ## Thanks
 
@@ -15,9 +15,10 @@ There are heroes amongst us. Thank you to the following teammembers, who have wo
 * Tanya 
 
 To reach these people for questions, drop a line to [support\@mintlify.com](mailto:support@mintlify.com?subject=Docs-Kudos)
+
 -- or --
 
 
-## Send a ticket to support
-How can we help today?
-<support-contact-form/>
+
+
+<SupportContactForm />
